[package]
name = "_pendulum"
version = "3.2.0-dev0"
edition = "2021"

[lib]
name = "_pendulum"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
overflow-checks = false

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "generate-import-lib"] }

[features]
extension-module = ["pyo3/extension-module"]
